[package]
name = "demo-engine"
version = "1.0.0"
edition = "2024"
description = "Demo IBus engine for libibus-rs (Japanese/English input)"
authors = ["Yoshihiro OKUMURA <orrisroot@gmail.com>"]
license = "MIT"
homepage = "https://github.com/orrisroot/libibus-rs"
repository = "https://github.com/orrisroot/libibus-rs"
publish = false

[dependencies]
libibus-rs = { path = "../libibus-rs" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
zbus = { version = "5", features = ["tokio"] }
zvariant = "5"
log = "0.4"
